<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weibo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nicheng">昵称</string>
    <string name="xingbie">性别</string>
    <string name="guanzhushu">关注数</string>
    <string name="fensishu">粉丝数</string>
    <string name="jianjie">简介</string>
    <string name="youxiang">邮箱</string>
    <string name="weibo">微博</string>
    <string name="jia">+</string>
    <string name="ahh">"          +"</string>
    <string name="ahhh">"                  +"</string>
    <string name="ahhhh">"                    +"</string>
    <string name="ahhhhh">"                     +"</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="xzbj">选择背景</string>
    <string name="queren">确认</string>
    <string name="qr">"                    确认"</string>
    <string name="qrqr">"                                   确认"</string>
    <string name="mzssmkycm">名字是神马可以吃莫~</string>
    <string name="jj">简介：你猜我的名字是什么！</string>
    <string name="xxzl">详细资料</string>
    <string name="wbncdst">微博（你猜多少条）</string>
    <string name="wb221">微博（221）</string>
    <string name="xxzla">详细\\n资料</string>

</resources>
