<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8E8E8"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/bg_border2"
            android:padding="4dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginLeft="5sp" />

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:paddingLeft="0sp"
                    android:paddingTop="10sp"
                    android:src="@drawable/xzbjaaaaa" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/bg_border2"
            android:padding="4dp" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginLeft="5sp" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:paddingLeft="4sp"
                    android:paddingTop="10sp"
                    android:src="@drawable/aaaxztx" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/bg_border3" >

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1sp"
                    android:text="@string/nicheng"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:background="@drawable/bg_border4"
                    android:ems="10" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="2dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7sp"
                    android:text="@string/xingbie"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/j"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nan"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nv"
                        android:textSize="15sp" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowgj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="2dp" >

                <TextView
                    android:id="@+id/textViewgj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7sp"
                    android:text="国籍"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="中国"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="美国"
                        android:textSize="15sp" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="年龄"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:background="@drawable/bg_border4"
                    android:ems="10"
                    android:numeric="integer" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guanzhushu"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:background="@drawable/bg_border4"
                    android:ems="10"
                    android:numeric="integer" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/textViewfs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fensishu"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextfs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:background="@drawable/bg_border4"
                    android:ems="10"
                    android:numeric="integer" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="8dp" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jianjie"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:background="@drawable/bg_border4"
                    android:ems="10" >
                </EditText>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/bg_border3" >

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3" >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#ffffff"
                    android:padding="4sp"
                    android:text="添加微博"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border3"
                android:padding="8dp" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </ListView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:padding="8sp"
                    android:text="再添加一个用户！"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border3"
                    android:gravity="center"
                    android:padding="8sp"
                    android:text="保存"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttondq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border3"
                    android:gravity="center"
                    android:padding="8sp"
                    android:text="读取"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>